<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnGot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PrincipalActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUserProfile"
        style="@style/CustomMaterialButton"
        android:layout_width="261dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:drawableRight="@android:drawable/ic_menu_myplaces"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToUpload"
        style="@style/CustomMaterialButton"
        android:layout_width="256dp"

        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableRight="@android:drawable/ic_menu_upload"
        android:text="@string/upload_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUserProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToWatch"
        style="@style/CustomMaterialButton"
        android:layout_width="261dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableRight="@android:drawable/ic_media_play"
        android:text="@string/watch_videos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToUpload" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToCalendar"
        style="@style/CustomMaterialButton"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableRight="@android:drawable/ic_menu_agenda"
        android:text="@string/saved_recipes"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToWatch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="@style/CustomMaterialButton"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:drawableRight="@android:drawable/ic_menu_revert"
        android:text="@string/logout"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToCalendar" />

</androidx.constraintlayout.widget.ConstraintLayout>
